@@ -133,6 +133,8 @@ class DebathenaGreeter:
         self.builder.get_object("rbHibernate").set_sensitive(LightDM.get_can_hibernate() and self.metapackage != "debathena-cluster")
         self.builder.get_object("rbSuspend").set_sensitive(LightDM.get_can_suspend() and self.metapackage != "debathena-cluster")
         
+        self.accessDlg = self.builder.get_object("accessibilityDialog")
+
         self.loginNotebook = self.builder.get_object("notebook1")
 
         # Scaling factor for smaller displays
@@ -148,8 +150,9 @@ class DebathenaGreeter:
         self.builder.connect_signals(handlers)
         # GNOME 3 turns off button images by default.  Turn it on
         # for the "Panel" window
-        s = Gtk.Settings.get_default()
-        s.set_property('gtk-button-images', True)
+        self.gtkSettings = Gtk.Settings.get_default()
+        self.gtkSettings.set_property('gtk-button-images', True)
+        self.origTheme = self.gtkSettings.get_property('gtk-theme-name')
         # Set a cursor for the root window, otherwise there isn't one
         rw = Gdk.get_default_root_window()
         rw.set_cursor(Gdk.Cursor(Gdk.CursorType.LEFT_PTR))
@@ -196,6 +199,7 @@ class DebathenaGreeter:
         winBranding.show_all()
 
     def showPowerDialog(self, widget):
+        self.winLogin.hide()
         if self.powerDlg.run() == Gtk.ResponseType.OK:
             # Just do the action.  The relevant buttons should be
             # greyed out for things we can't do.  LightDM will
@@ -212,9 +216,18 @@ class DebathenaGreeter:
             except GLib.GError, e:
                 self.errDialog("An error occurred while trying to perform a power-related operation.  The most common cause of this is trying to shutdown, reboot, or suspend the machine when someone else is logged in remotely or on one of the virtual terminals.  The full error text appears below:\n\n" + str(e))
         self.powerDlg.hide()
+        self.winLogin.show()
 
     def showAccessDialog(self, widget):
-        pass
+        self.winLogin.hide()
+        if self.accessDlg.run() == Gtk.ResponseType.OK:
+            if self.builder.get_object("cbHighContrast").get_active():
+                self.gtkSettings.set_property('gtk-theme-name', 'HighContrastInverse')
+            else:
+                self.gtkSettings.set_property('gtk-theme-name', self.origTheme)
+        self.accessDlg.hide()
+        self.winLogin.show()
+
 
     def _file_changed(self, monitor, file1, file2, evt_type):
         if evt_type == Gio.FileMonitorEvent.CREATED:
